--- a/stylesheets/partials/_practice-area.sass
+++ b/stylesheets/partials/_practice-area.sass
@@ -139,12 +139,12 @@
 .fancybox_search
   .investors
     color: $grey
-    font: normal normal normal 1.2em Arial, sans-serif
+    font: normal normal normal 1.2em/2.0em Arial, sans-serif
     margin: 20px 0
   .logo-header
     +grid-container
     +grid(8)
-    margin-top: 40px
+    height: 40px 
     border-bottom: 3px solid $orange
   p
     color: $crisp-grey
